--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{include = "online_shop"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 django = "^4.2.4"
+psycopg2 = "^2.9.7"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
