--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ python = "^3.11"
 django = "^4.2.4"
 psycopg2 = "^2.9.7"
 python-dotenv = "^1.0.0"
+shelter = "^2.4.0"
+pillow = "^10.0.0"
+ipython = "^8.15.0"
 
 
 [build-system]
